Fix for bug 83425. A regression was introduced when we moved from the XIF code to the existing serialized scheme. We now correctly identify tags explicitly put in by the TXT to HTML converter. r=akkana, sr=jst